Revision history for AlgorithmsIT

{{$NEXT}}

0.0.3  2023-06-09T13:26:33-05:00
    - Remove the reference to a non-existent bug on line 12 of the 'KMP-Matcher'
      routine.

0.0.2  2023-06-09T10:18:21-05:00
    - Corrected the implementation of the algorithm by
      adding a missing line. It now correctly
      handles overlapping matches as it was
      designed to do.
    - Improved the docs.

0.0.1  2023-06-08T18:28:51-05:00
    - Initial version