@@ -13,7 +13,7 @@
   "perl": "6.d",
   "provides": {
     "AlgorithmsIT": "lib/AlgorithmsIT.rakumod",
-    "Classes": "lib/Classes.rakumod"
+    "AlgorithmsIT::Classes": "lib/AlgorithmsIT/Classes.rakumod"
   },
   "resources": [
   ],
