@@ -1,6 +1,11 @@
 Revision history for AlgorithmsIT
 
 {{$NEXT}}
+    - Fix a bug caused by an improper use of a range input
+      for the $pi array
+      + add a test for it
+    - Move the Classes module to AlgorithmsIT::Classes
+      + adjust all files accordingly (including the README)
 
 0.0.3  2023-06-09T13:26:33-05:00
     - Remove the reference to a non-existent bug on line 12 of the 'KMP-Matcher'
